# infimount

./: .gitignore  .yamllint.yaml  Agents.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MCP_requirement.md  PRODUCT.md  README.md  SECURITY.md  build.md  create_resources.py  index.html  infimount.code-workspace  infimount.json  openhsb.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  deps-audit.yml  integration-tests.yml  lint-repo.yml  pages.yml  release.yml  sync-version-after-release.yml
apps/desktop/: .prettierignore  eslint.config.js  index.html  package.json  playwright-ct.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.coverage.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
apps/desktop/playwright/: add-storage-dialog.spec.tsx  app-shell-layout.spec.tsx  file-preview-panel.spec.tsx  index.html  mcp-settings-dialog.spec.tsx  storage-config-editor-dialog.spec.tsx
apps/desktop/src/: App.tsx  images.d.ts  index.css  main.tsx  theme.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  infimount.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  state.rs
apps/desktop/src/assets/: loading-infinity.apng
apps/desktop/src/components/: ActivityPanel.tsx  AddStorageDialog.tsx  Button.tsx  ErrorBoundary.tsx  FileBrowser.test.tsx  FileBrowser.tsx  FileGrid.test.tsx  FileGrid.tsx  FileIcon.test.tsx  FileIcon.tsx  FilePreviewDialog.tsx  FilePreviewPanel.test.tsx  FilePreviewPanel.tsx  FileTable.test.tsx  FileTable.tsx  FileVersionsTab.tsx  JsonCodeEditor.tsx  McpSettingsDialog.tsx  PreviewPanel.tsx  StorageConfigEditorDialog.tsx  StorageSidebar.test.tsx  StorageSidebar.tsx  ToastContainer.tsx  UploadZone.test.tsx  UploadZone.tsx  WindowControls.tsx
apps/desktop/src/components/file-icon-themes/: classic.ts  icon-keys.ts  modern.ts  shared.ts  square.ts  vivid.ts
apps/desktop/src/components/ui/: alert-dialog.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  resizable.tsx  (+5 more)
apps/desktop/src/e2e/: file-browser.e2e.test.tsx
apps/desktop/src/hooks/: use-app-zoom.tsx  use-file-clipboard.tsx  use-icon-theme.tsx  use-toast.ts
apps/desktop/src/integration/: add-storage-dialog.integration.test.tsx  file-browser.integration.test.tsx  mcp-settings-dialog.integration.test.tsx  storage-config-editor.integration.test.tsx
apps/desktop/src/lib/: api.ts  toast.ts
apps/desktop/src/newui/: App.tsx
apps/desktop/src/pages/: Index.tsx  NotFound.tsx
apps/desktop/src/store/: themeStore.ts
apps/desktop/src/test/: MockedAddStorageDialog.tsx  MockedFilePreviewPanel.tsx  setup.ts
apps/desktop/src/types/: source.ts  storage.ts
crates/core/: Cargo.toml  storage_schemas.json
crates/core/src/: config.rs  lib.rs  models.rs  operations.rs  registry.rs  schema.rs  util.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: errors.rs  lib.rs  main.rs  opendal_adapter.rs  path.rs  prompts.rs  registry.rs  resources.rs  runtime.rs  schemas.rs  server.rs  session.rs  settings.rs  telemetry.rs
crates/mcp/src/tools_fs/: common.rs  copy_path.rs  delete_path.rs  delete_version.rs  generate_download_link.rs  list_dir.rs  list_versions.rs  mkdir.rs  mod.rs  move_path.rs  read_file.rs  read_file_version.rs  search_paths.rs  stat_path.rs  tests.rs  write_file.rs
crates/mcp/src/tools_storage/: add_storage.rs  common.rs  edit_storage.rs  export_config.rs  import_config.rs  list_storages.rs  mod.rs  remove_storage.rs  tests.rs  validate_storage.rs
docs/: BingSiteAuth.xml  backend-capabilities.md  index.html  llms.txt  mcp-client-setup.md  mcp-vnext-implementation-spec.md  releasing.md  robots.txt  security.md  sitemap.xml
scripts/: check-release-links.sh  coverage-rust.sh  setup-git-hooks.sh  smoke-desktop.sh  sync-release-version.mjs
storage-simulator/: Makefile  README.md  bootstrap.sh  create_resources.py  docker-compose.yml  sample.txt
storage-simulator/opendal/: azure.yaml  filer.yaml  gcs.yaml  s3.yaml
(+6 files in other folders)
