[package]
name = "openhsb_core"
version = "0.1.0"
edition = "2021"

[dependencies]
opendal = { version = "0.51", features = ["services-fs", "services-s3", "services-webdav", "services-azblob", "services-gcs"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
