[package]
name = "infimount_core"
version = "0.1.0"
edition = "2021"

[dependencies]
opendal = { version = "0.55.0", features = ["services-fs", "services-s3", "services-webdav", "services-azblob", "services-gcs", "services-memory"] }

futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
thiserror = "2.0.17"
base64 = "0.22"
indexmap = "2.12.0"
