[package]
name = "infimount_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
fs2 = "0.4"
futures = "0.3"
opendal = { version = "0.55.0", features = ["services-fs", "services-s3", "services-webdav", "services-azblob", "services-gcs"] }
rmcp = { version = "1.1.0", features = ["transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
