[package]
name = "infimount"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
chrono = { version = "0.4", features = ["clock"] }
opendal = "0.55.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
infimount_core = { path = "../../../crates/core" }
infimount_mcp = { path = "../../../crates/mcp" }
tokio = { version = "1.49.0", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
